<resources>
    <string name="app_name">Rasyan_ahmed-pset2</string>
    <string name="welcome">Welcome to Mad Libs! I will ask you to fill in words to complete a story. You won\'t be able to see the whole story until you are done filling in all the missing words. That\'s part of the fun. Click below to get started ...</string>
    <string name="start_button">GET STARTED!</string>
    <string name="second_screen">Fill in the words to complete the story!</string>
    <string name="ok">OK</string>
    <string name="words_left">%1$d word(s) left</string>
    <string name="please">please type a/an %1$s</string>
    <string name="type">%1$s</string>
    <string name="your">Your Mad Lib Story!</string>
    <string name="story">story</string>
    <string name="another">MAKE ANOTHER STORY</string>
</resources>
